--- a/styles/pages/_aboutSection.scss
+++ b/styles/pages/_aboutSection.scss
@@ -8,9 +8,9 @@
         align-items: center;
         width: 100%;
         .aboutImg {
-            height: 565px;
             display: flex;
             align-items: stretch;
+            width: 50%;
             img{
                 display: block;
                 width: 100%;
@@ -23,11 +23,11 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding-right: 2%;
             margin-top: 35px;
-            padding-bottom: 35px;
+            width: 50%;
             h2 {
                 margin-top: 0;
+                text-transform: uppercase;
             }
             .aboutItem {
                 display: flex;
@@ -36,18 +36,23 @@
                 .aboutIcon {
                     display: flex;
                     justify-content: center;
-                    height: 48px;
-                    width: 60px;
+                    align-items: center;
+                    height: 40px;
+                    width: 52px;
                     i {
                         display: block;
-                        font-size: 4.8rem;
+                        font-size: 4rem;
                         color: $accentColor;
                     }
                 }
                 .aboutText {
                     margin-left: 25px;
+                    h3 {
+                        margin: 10px 0;
+                    }
                     p {
-                        width: 75%;
+                        margin: 10px 0;
+                        width: 80%;
                     }
                 }
             }
@@ -61,6 +66,7 @@
             flex-direction: column;
             .aboutImg {
                 height: 365px;
+                width: 80%;
             }
             .aboutUs {
                 border-top: none;
@@ -74,6 +80,7 @@
             flex-direction: column;
             .aboutImg {
                 height: 365px;
+                width: 80%;
             }
             .aboutUs {
                 border-top: none;
@@ -88,7 +95,8 @@
             justify-content: center;
             align-items: center;
             .aboutImg {
-                height: 500px;
+                height: auto;
+                width: 70%;
             }
             .aboutUs {
                 border-top: none;
@@ -103,7 +111,8 @@
             justify-content: center;
             align-items: center;
             .aboutImg {
-                height: 500px;
+                height: auto;
+                width: 60%;
             }
             .aboutUs {
                 border-top: none;
@@ -118,7 +127,7 @@
             flex-direction: row;
             justify-content: space-between;
             .aboutImg {
-                height: 565px;
+                width: 50%;
             }
             .aboutUs {
                 border-top: 1px solid $borderColor;
