--- a/styles/pages/_projectsSection.scss
+++ b/styles/pages/_projectsSection.scss
@@ -6,6 +6,9 @@
         justify-content: space-evenly;
         align-content: center;
         text-align: center;
+        h2 {
+            text-transform: uppercase;
+        }
     }
     .projectCats {
         nav {
