--- a/styles/pages/_footer.scss
+++ b/styles/pages/_footer.scss
@@ -73,6 +73,7 @@ footer {
                 ul {
                     margin: 15px auto;
                     display: flex;
+                    flex-wrap: wrap;
                     list-style: none;
                     padding: 0;
                     a {
@@ -99,7 +100,7 @@ footer {
                             right: 0;
                             left: 0;
                             bottom: 0;
-                            padding-top: 9px;
+                            padding-top: 12px;
                             transition: margin-top 150ms linear;
                         }
                         .social2 {
@@ -108,7 +109,7 @@ footer {
                             right: 0;
                             left: 0;
                             bottom: 0;
-                            padding-top: 9px;
+                            padding-top: 12px;
                             margin-top: 35px;
                             transition: margin-top 150ms linear;
                         }
@@ -136,7 +137,7 @@ footer {
         }
     }
 }
-@media (min-width: 0) {
+@media (min-width: 0) and (max-width: $sm) {
     footer {
         .wrapper {
             .footer {
@@ -147,7 +148,12 @@ footer {
                     display: none;
                 }
                 .mainLinks {
+                    flex-direction: column;
+                    align-items: center;
                     width: 100%;
+                    .mainLinkItem {
+                        width: 45%;
+                    }
                 }
             }
             .theEnd {
@@ -158,6 +164,9 @@ footer {
                     margin: 0 auto;
                     ul {
                         justify-content: center;
+                        a {
+                            font-size: $aDesk;
+                        }
                     }
                 }
 
@@ -165,10 +174,37 @@ footer {
         }
     }
 }
-@media (min-width: $md) and (max-width: $lg) {
+@media (min-width: $sm) {
     footer {
+        .wrapper {
+            .footer {
+                .logo {
+                    display: none;
+                }
+                .mainLinks {
+                    flex-direction: row;
+                }
+            }
+        }
+        .theEnd {
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            .socialLinks {
+                margin: 0 auto;
+                ul {
+                    justify-content: center;
+                    a {
+                        font-size: $aDesk;
+                    }
+                }
+            }
 
+        }
     }
+}
+@media (min-width: $md) and (max-width: $lg) {
+
 }
 @media (min-width: $lg) {
     footer {
@@ -179,6 +215,7 @@ footer {
                 align-items: flex-start;
                 text-align: left;
                 .mainLinks {
+                    flex-direction: row;
                     width: 80%;
                 }
             }
