--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,11 +1,24 @@
-// Text colors
+// Font colors
 $lightText: white;
 $medText: grey;
 $darkText: black;
-// Text weights
+// Font sizes:
+$baseFont: 62.5%;
+$h1Desk: 5rem; 
+$h2Desk: 3.5rem;
+$h3Desk: 2.2rem;
+$pDesk: 1.8rem;
+$aDesk: 1.5rem;
+$h1Mobile: 4rem;
+$h2Mobile: 3rem;
+$h3Mobile: 2rem;
+$pMobile: 1.5rem;
+$aMobile: 1.2rem;
+// Font weights
 $thinText: 400;
 $buffText: 700;
 $heavyText: 900;
+// 
 // Colours
 $logoColor: #fa4614;
 $greyText: #7d7d7d;
