--- a/styles/pages/_header.scss
+++ b/styles/pages/_header.scss
@@ -86,6 +86,7 @@ header {
             align-items: center;
             .logo {
                 border: none;
+                width: 225px;
             }
             nav {
                 justify-content: center;
@@ -117,6 +118,7 @@ header {
             align-items: center;
             .logo {
                 border: none;
+                width: 225px;
             }
             nav {
                 justify-content: center;
@@ -128,7 +130,13 @@ header {
     }
 }
 @media (min-width: $md) {
-
+    header {
+        .headerTop {
+            .logo {
+                width: 250px;
+            }
+        }
+    }
 }
 @media (min-width: $lg) {
     header {
