--- a/styles/pages/_overTheTop.scss
+++ b/styles/pages/_overTheTop.scss
@@ -7,6 +7,7 @@
     border-radius: 30px;
     padding: 0px 3px 1px 3px;
     z-index: 5;
+    transition: all 300ms ease-in;
     &:hover {
         background: lighten(rgba(211,211,211,0.8), 5);
     }
