--- a/styles/pages/_workSection.scss
+++ b/styles/pages/_workSection.scss
@@ -25,6 +25,7 @@
                     width: 50%;
                     margin: 0;
                     color: $greyText;
+                    line-height: 25px;
                 }
             }
             .workItems {
@@ -40,9 +41,10 @@
                     flex: 1 0 auto;
                     border-radius: 10px;
                     text-align: center;
+                    // height: 475px;
                     figure {
                         width: 100%;
-                        height: 275px;
+                        // height: 275px;
                         margin: 0;
                         transition: opacity 300ms ease-in;
                         &:hover {
@@ -51,7 +53,7 @@
                         img {
                             display: block;
                             width: 100%;
-                            height: 100%;
+                            height: auto;
                             border-top-left-radius: 10px;
                             border-top-right-radius: 10px;
                         }
@@ -89,8 +91,7 @@
                                 border-color: $accentColor;
                             }
                         }
-                    }
-                    
+                    }          
                 }
             }
         }
@@ -102,27 +103,20 @@
     #work {
         .wrapper {
             width: 80%;
-            height: 2100px;
+            height: 1750px;
             .work {
                 height: inherit;
+                .workMain {
+                    p {
+                        width: 90%;
+                    }
+                }
                 .workItems {
                     flex-direction: column;
                     justify-content: space-evenly;
                     .workItem {
                         width: 100%;
                         margin: 0;
-                        figure {
-                            height: 350px;
-                            h3 {
-                                font-size: 2rem;
-                            }
-                            p {
-                                font-size: 1.5rem;
-                            }
-                            a {
-                                font-size: 1.2rem;
-                            }
-                        }
                     }
                     .workItem1 {
                         margin-bottom: 25px;
@@ -139,17 +133,21 @@
     #work {
         .wrapper {
             width: 80%;
-            height: 2100px;
+            height: 1950px;
             .work {
                 height: inherit;
+                .workMain {
+                    p {
+                        width: 80%;
+                    }
+                }
                 .workItems {
                     flex-direction: column;
                     justify-content: space-evenly;
                     .workItem {
                         width: 100%;
                         margin: 0;
-                        figure {
-                            height: 350px;
+                        .workText {
                             h3 {
                                 font-size: 2rem;
                             }
@@ -185,9 +183,6 @@
                     .workItem {
                         flex: 1 0 auto;
                         max-width: 33.33%;
-                        figure {
-                            height: 175px;
-                        }
                     }
                     .workItem1 {
                         margin-right: 25px;
@@ -215,9 +210,6 @@
                     .workItem {
                         flex: 1 0 auto;
                         max-width: 33.33%;
-                        figure {
-                            height: 275px;
-                        }
                         .workText {
                             h3 {
                                 font-size: 2.5rem;
