--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -9,6 +9,7 @@
     .logo {
         border-right: 0.5px solid rgba(211, 211, 211, 0.5);
         width: 250px;
+        margin: 0 auto;
         max-width: 250px;
          img {
             display: block;
@@ -22,6 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        margin: 0 auto;
         ul {
             padding: 0;
             display: flex;
