--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,30 @@ p {
 a {
   font-size: 1.5rem; }
 
+@media (min-width: 0) and (max-width: 768px) {
+  h1 {
+    font-size: 4rem; }
+  h2 {
+    font-size: 3rem; }
+  h3 {
+    font-size: 2rem; }
+  p {
+    font-size: 1.5rem; }
+  a {
+    font-size: 1.2rem; } }
+
+@media (min-wdith: 768px) {
+  h1 {
+    font-size: 5rem; }
+  h2 {
+    font-size: 3.5rem; }
+  h3 {
+    font-size: 2.2rem; }
+  p {
+    font-size: 1.8rem; }
+  a {
+    font-size: 1.5rem; } }
+
 .overTheTop {
   position: fixed;
   display: none;
@@ -210,7 +234,10 @@ a {
   background: rgba(211, 211, 211, 0.8);
   border-radius: 30px;
   padding: 0px 3px 1px 3px;
-  z-index: 5; }
+  z-index: 5;
+  -webkit-transition: all 300ms ease-in;
+  -o-transition: all 300ms ease-in;
+  transition: all 300ms ease-in; }
   .overTheTop:hover {
     background: rgba(224, 224, 224, 0.8); }
   .overTheTop a {
@@ -235,6 +262,7 @@ header {
     header .headerTop .logo {
       border-right: 0.5px solid rgba(211, 211, 211, 0.5);
       width: 250px;
+      margin: 0 auto;
       max-width: 250px; }
       header .headerTop .logo img {
         display: block;
@@ -251,7 +279,8 @@ header {
       align-items: center;
       -webkit-box-pack: end;
       -ms-flex-pack: end;
-      justify-content: flex-end; }
+      justify-content: flex-end;
+      margin: 0 auto; }
       header .headerTop nav ul {
         padding: 0;
         display: -webkit-box;
@@ -408,7 +437,8 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     header .headerTop .logo {
-      border: none; }
+      border: none;
+      width: 225px; }
     header .headerTop nav {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -437,13 +467,18 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     header .headerTop .logo {
-      border: none; }
+      border: none;
+      width: 225px; }
     header .headerTop nav {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center; }
     header .headerTop .search {
       border: none; } }
+
+@media (min-width: 768px) {
+  header .headerTop .logo {
+    width: 250px; } }
 
 @media (min-width: 992px) {
   header .headerTop {
@@ -478,6 +513,7 @@ header {
   .headerAfter .logo {
     border-right: 0.5px solid rgba(211, 211, 211, 0.5);
     width: 250px;
+    margin: 0 auto;
     max-width: 250px; }
     .headerAfter .logo img {
       display: block;
@@ -494,7 +530,8 @@ header {
     align-items: center;
     -webkit-box-pack: end;
     -ms-flex-pack: end;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    margin: 0 auto; }
     .headerAfter nav ul {
       padding: 0;
       display: -webkit-box;
@@ -539,7 +576,8 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     .headerAfter .logo {
-      border: none; }
+      border: none;
+      width: 225px; }
     .headerAfter nav {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -564,13 +602,18 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     .headerAfter .logo {
-      border: none; }
+      border: none;
+      width: 225px; }
     .headerAfter nav {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center; }
     .headerAfter .search {
       border: none; } }
+
+@media (min-width: 768px) {
+  .headerAfter .logo {
+    width: 250px; } }
 
 @media (min-width: 992px) {
   .headerAfter {
@@ -629,7 +672,8 @@ header {
       #work .wrapper .work .workMain p {
         width: 50%;
         margin: 0;
-        color: #7d7d7d; }
+        color: #7d7d7d;
+        line-height: 25px; }
     #work .wrapper .work .workItems {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -662,7 +706,6 @@ header {
         text-align: center; }
         #work .wrapper .work .workItems .workItem figure {
           width: 100%;
-          height: 275px;
           margin: 0;
           -webkit-transition: opacity 300ms ease-in;
           -o-transition: opacity 300ms ease-in;
@@ -672,7 +715,7 @@ header {
           #work .wrapper .work .workItems .workItem figure img {
             display: block;
             width: 100%;
-            height: 100%;
+            height: auto;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px; }
         #work .wrapper .work .workItems .workItem .workText {
@@ -718,9 +761,11 @@ header {
 @media (min-width: 0) and (max-width: 576px) {
   #work .wrapper {
     width: 80%;
-    height: 2100px; }
+    height: 1750px; }
     #work .wrapper .work {
       height: inherit; }
+      #work .wrapper .work .workMain p {
+        width: 90%; }
       #work .wrapper .work .workItems {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -732,14 +777,6 @@ header {
         #work .wrapper .work .workItems .workItem {
           width: 100%;
           margin: 0; }
-          #work .wrapper .work .workItems .workItem figure {
-            height: 350px; }
-            #work .wrapper .work .workItems .workItem figure h3 {
-              font-size: 2rem; }
-            #work .wrapper .work .workItems .workItem figure p {
-              font-size: 1.5rem; }
-            #work .wrapper .work .workItems .workItem figure a {
-              font-size: 1.2rem; }
         #work .wrapper .work .workItems .workItem1 {
           margin-bottom: 25px; }
         #work .wrapper .work .workItems .workItem3 {
@@ -748,9 +785,11 @@ header {
 @media (min-width: 576px) {
   #work .wrapper {
     width: 80%;
-    height: 2100px; }
+    height: 1950px; }
     #work .wrapper .work {
       height: inherit; }
+      #work .wrapper .work .workMain p {
+        width: 80%; }
       #work .wrapper .work .workItems {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -762,14 +801,12 @@ header {
         #work .wrapper .work .workItems .workItem {
           width: 100%;
           margin: 0; }
-          #work .wrapper .work .workItems .workItem figure {
-            height: 350px; }
-            #work .wrapper .work .workItems .workItem figure h3 {
-              font-size: 2rem; }
-            #work .wrapper .work .workItems .workItem figure p {
-              font-size: 1.5rem; }
-            #work .wrapper .work .workItems .workItem figure a {
-              font-size: 1.2rem; }
+          #work .wrapper .work .workItems .workItem .workText h3 {
+            font-size: 2rem; }
+          #work .wrapper .work .workItems .workItem .workText p {
+            font-size: 1.5rem; }
+          #work .wrapper .work .workItems .workItem .workText a {
+            font-size: 1.2rem; }
         #work .wrapper .work .workItems .workItem1 {
           margin-bottom: 25px; }
         #work .wrapper .work .workItems .workItem3 {
@@ -794,8 +831,6 @@ header {
           -ms-flex: 1 0 auto;
           flex: 1 0 auto;
           max-width: 33.33%; }
-          #work .wrapper .work .workItems .workItem figure {
-            height: 175px; }
         #work .wrapper .work .workItems .workItem1 {
           margin-right: 25px;
           margin-bottom: 0; }
@@ -822,8 +857,6 @@ header {
           -ms-flex: 1 0 auto;
           flex: 1 0 auto;
           max-width: 33.33%; }
-          #work .wrapper .work .workItems .workItem figure {
-            height: 275px; }
           #work .wrapper .work .workItems .workItem .workText h3 {
             font-size: 2.5rem; }
           #work .wrapper .work .workItems .workItem .workText p {
@@ -925,24 +958,42 @@ header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    margin-bottom: 35px; }
     #about .about .aboutImg {
-      height: 365px;
+      height: 225px;
       width: 80%; }
     #about .about .aboutUs {
-      border-top: none; } }
+      border-top: none;
+      width: 80%;
+      padding: 0;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-bottom: 35px; }
+      #about .about .aboutUs .aboutItem {
+        margin-left: 45px; } }
 
 @media (min-width: 576px) {
   #about .about {
+    margin-bottom: 35px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
     #about .about .aboutImg {
-      height: 365px;
+      height: 305px;
       width: 80%; }
     #about .about .aboutUs {
-      border-top: none; } }
+      border-top: none;
+      width: 80%;
+      padding: 0;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding-bottom: 35px; }
+      #about .about .aboutUs .aboutItem {
+        margin-left: 75px; } }
 
 @media (min-width: 768px) and (max-width: 992px) {
   #about .about {
@@ -957,12 +1008,15 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     #about .about .aboutImg {
-      height: auto;
-      width: 70%; }
+      height: 325px;
+      width: 80%; }
     #about .about .aboutUs {
-      border-top: none; } }
+      border-top: none;
+      width: 80%; }
+      #about .about .aboutUs .aboutItem {
+        margin-left: 100px; } }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1200px) {
   #about .about {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -975,28 +1029,34 @@ header {
     -ms-flex-align: center;
     align-items: center; }
     #about .about .aboutImg {
-      height: auto;
-      width: 60%; }
+      height: 410px;
+      width: 80%; }
     #about .about .aboutUs {
-      border-top: none; } }
+      border-top: none;
+      width: 80%; }
+      #about .about .aboutUs .aboutItem {
+        margin-left: 120px; } }
 
 @media (min-width: 1200px) {
-  #about {
-    height: 100vh; }
-    #about .about {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between; }
-      #about .about .aboutImg {
-        width: 50%; }
-      #about .about .aboutUs {
-        border-top: 1px solid #d3d3d3;
-        height: 565px;
-        margin: 0; } }
+  #about .about {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    #about .about .aboutImg {
+      width: 50%;
+      height: auto; }
+    #about .about .aboutUs {
+      border-top: 1px solid #d3d3d3;
+      -webkit-box-align: start;
+      -ms-flex-align: start;
+      align-items: flex-start;
+      height: 565px;
+      margin: 0;
+      width: 50%; } }
 
 #projects {
   margin: 0 auto; }
@@ -1294,6 +1354,8 @@ footer .wrapper {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
       list-style: none;
       padding: 0; }
       footer .wrapper .theEnd .socialLinks ul a {
@@ -1316,7 +1378,7 @@ footer .wrapper {
           right: 0;
           left: 0;
           bottom: 0;
-          padding-top: 9px;
+          padding-top: 12px;
           -webkit-transition: margin-top 150ms linear;
           -o-transition: margin-top 150ms linear;
           transition: margin-top 150ms linear; }
@@ -1326,7 +1388,7 @@ footer .wrapper {
           right: 0;
           left: 0;
           bottom: 0;
-          padding-top: 9px;
+          padding-top: 12px;
           margin-top: 35px;
           -webkit-transition: margin-top 150ms linear;
           -o-transition: margin-top 150ms linear;
@@ -1344,7 +1406,7 @@ footer .wrapper {
       footer .wrapper .theEnd .socialLinks ul .instagram {
         background: blueviolet; }
 
-@media (min-width: 0) {
+@media (min-width: 0) and (max-width: 576px) {
   footer .wrapper .footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1357,7 +1419,16 @@ footer .wrapper {
     footer .wrapper .footer .logo {
       display: none; }
     footer .wrapper .footer .mainLinks {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
       width: 100%; }
+      footer .wrapper .footer .mainLinks .mainLinkItem {
+        width: 45%; }
   footer .wrapper .theEnd {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1372,7 +1443,35 @@ footer .wrapper {
       footer .wrapper .theEnd .socialLinks ul {
         -webkit-box-pack: center;
         -ms-flex-pack: center;
-        justify-content: center; } }
+        justify-content: center; }
+        footer .wrapper .theEnd .socialLinks ul a {
+          font-size: 1.5rem; } }
+
+@media (min-width: 576px) {
+  footer .wrapper .footer .logo {
+    display: none; }
+  footer .wrapper .footer .mainLinks {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  footer .theEnd {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center; }
+    footer .theEnd .socialLinks {
+      margin: 0 auto; }
+      footer .theEnd .socialLinks ul {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; }
+        footer .theEnd .socialLinks ul a {
+          font-size: 1.5rem; } }
 
 @media (min-width: 992px) {
   footer .wrapper .footer {
@@ -1387,6 +1486,10 @@ footer .wrapper {
     align-items: flex-start;
     text-align: left; }
     footer .wrapper .footer .mainLinks {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
       width: 80%; } }
 
 @media (min-width: 1200px) {
