--- a/styles/sections/_footer.scss
+++ b/styles/sections/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     .wrapper {
-        margin: 200px auto 0 auto;
+        margin: 150px auto 0 auto;
         width: 65%;
         .footer {
             display: flex;
@@ -71,7 +71,7 @@ footer {
             }
             .socialLinks {
                 ul {
-                    margin: 15px auto;
+                    margin: 10px auto;
                     display: flex;
                     flex-wrap: wrap;
                     list-style: none;
@@ -79,7 +79,7 @@ footer {
                     a {
                         display: inline-block;
                         text-align: center;
-                        margin: 0 7px;
+                        margin: 12px 7px;
                         padding: 10px 13px;
                         border-radius: 40px;
                         color: white;
@@ -100,7 +100,7 @@ footer {
                             right: 0;
                             left: 0;
                             bottom: 0;
-                            padding-top: 12px;
+                            padding-top: 10px;
                             transition: margin-top 150ms linear;
                         }
                         .social2 {
@@ -109,7 +109,7 @@ footer {
                             right: 0;
                             left: 0;
                             bottom: 0;
-                            padding-top: 12px;
+                            padding-top: 10px;
                             margin-top: 35px;
                             transition: margin-top 150ms linear;
                         }
