--- a/styles/sections/_projects.scss
+++ b/styles/sections/_projects.scss
@@ -18,6 +18,7 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
+                padding: 0;
                 li {
                     list-style: none;
                     margin: 25px 0;
