--- a/styles/sections/_work.scss
+++ b/styles/sections/_work.scss
@@ -31,7 +31,7 @@
             .workItems {
                 display: flex;
                 justify-content: center;
-                align-items: center;
+                align-items: space-around;
                 width: 100%;
                 .workItem {
                     display: flex;
@@ -41,10 +41,8 @@
                     flex: 1 0 auto;
                     border-radius: 10px;
                     text-align: center;
-                    // height: 475px;
                     figure {
                         width: 100%;
-                        // height: 275px;
                         margin: 0;
                         transition: opacity 300ms ease-in;
                         &:hover {
@@ -61,7 +59,7 @@
                     .workText {
                         display: flex;
                         flex-direction: column;
-                        justify-content: space-evenly;
+                        justify-content: space-around;
                         align-items: center;
                         width: 100%;
                         border-left: 1px solid $borderColor;
@@ -76,8 +74,8 @@
                         p {
                             color: $greyText;
                             margin: 30px 0;
+                            // height: 75px;
                             width: 90%;
-        
                         }
                         a {
                             display: block;
@@ -97,7 +95,6 @@
         }
     }
 }
-
 // Work section media queries
 @media (min-width: 0) and (max-width: $sm) {
     #work {
@@ -147,17 +144,6 @@
                     .workItem {
                         width: 100%;
                         margin: 0;
-                        .workText {
-                            h3 {
-                                font-size: 2rem;
-                            }
-                            p {
-                                font-size: 1.5rem;
-                            }
-                            a {
-                                font-size: 1.2rem;
-                            }
-                        }
                     }
                     .workItem1 {
                         margin-bottom: 25px;
@@ -183,6 +169,9 @@
                     .workItem {
                         flex: 1 0 auto;
                         max-width: 33.33%;
+                        p {
+                            height: 60px;
+                        }
                     }
                     .workItem1 {
                         margin-right: 25px;
@@ -210,16 +199,8 @@
                     .workItem {
                         flex: 1 0 auto;
                         max-width: 33.33%;
-                        .workText {
-                            h3 {
-                                font-size: 2.5rem;
-                            }
-                            p {
-                                font-size: 1.8rem;
-                            }
-                            a {
-                                font-size: 1.6rem;
-                            }
+                        p {
+                            height: 60px;
                         }
                     }
                     .workItem1 {
@@ -234,6 +215,4 @@
             }
         }
     }
-}
-@media (min-width: $xl) {
 }
