--- a/styles/styles.css
+++ b/styles/styles.css
@@ -313,7 +313,7 @@ header {
       border-left: 0.5px solid rgba(211, 211, 211, 0.5); }
       header .headerTop .search a {
         color: white;
-        padding: 25px 45px; }
+        padding: 40px 45px; }
   header .hero .hero1 {
     background: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/Splash1.PNG) no-repeat center;
     background: -o-linear-gradient(45deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/Splash1.PNG) no-repeat center;
@@ -564,7 +564,7 @@ header {
     border-left: 0.5px solid rgba(211, 211, 211, 0.5); }
     .headerAfter .search a {
       color: black;
-      padding: 25px 45px; }
+      padding: 40px 45px; }
 
 @media (min-width: 0) and (max-width: 576px) {
   .headerAfter {
@@ -681,9 +681,9 @@ header {
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
+      -webkit-box-align: space-around;
+      -ms-flex-align: space-around;
+      align-items: space-around;
       width: 100%; }
       #work .wrapper .work .workItems .workItem {
         display: -webkit-box;
@@ -726,9 +726,8 @@ header {
           -webkit-box-direction: normal;
           -ms-flex-direction: column;
           flex-direction: column;
-          -webkit-box-pack: space-evenly;
-          -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+          -ms-flex-pack: distribute;
+          justify-content: space-around;
           -webkit-box-align: center;
           -ms-flex-align: center;
           align-items: center;
@@ -801,12 +800,6 @@ header {
         #work .wrapper .work .workItems .workItem {
           width: 100%;
           margin: 0; }
-          #work .wrapper .work .workItems .workItem .workText h3 {
-            font-size: 2rem; }
-          #work .wrapper .work .workItems .workItem .workText p {
-            font-size: 1.5rem; }
-          #work .wrapper .work .workItems .workItem .workText a {
-            font-size: 1.2rem; }
         #work .wrapper .work .workItems .workItem1 {
           margin-bottom: 25px; }
         #work .wrapper .work .workItems .workItem3 {
@@ -831,6 +824,8 @@ header {
           -ms-flex: 1 0 auto;
           flex: 1 0 auto;
           max-width: 33.33%; }
+          #work .wrapper .work .workItems .workItem p {
+            height: 60px; }
         #work .wrapper .work .workItems .workItem1 {
           margin-right: 25px;
           margin-bottom: 0; }
@@ -857,12 +852,8 @@ header {
           -ms-flex: 1 0 auto;
           flex: 1 0 auto;
           max-width: 33.33%; }
-          #work .wrapper .work .workItems .workItem .workText h3 {
-            font-size: 2.5rem; }
-          #work .wrapper .work .workItems .workItem .workText p {
-            font-size: 1.8rem; }
-          #work .wrapper .work .workItems .workItem .workText a {
-            font-size: 1.6rem; }
+          #work .wrapper .work .workItems .workItem p {
+            height: 60px; }
         #work .wrapper .work .workItems .workItem1 {
           margin-right: 25px;
           margin-bottom: 0; }
@@ -951,7 +942,7 @@ header {
             margin: 10px 0; }
           #about .about .aboutUs .aboutItem .aboutText p {
             margin: 10px 0;
-            width: 80%; }
+            width: 90%; }
 
 @media (min-width: 0) and (max-width: 576px) {
   #about .about {
@@ -1051,12 +1042,16 @@ header {
       height: auto; }
     #about .about .aboutUs {
       border-top: 1px solid #d3d3d3;
+      padding-left: 60px;
       -webkit-box-align: start;
       -ms-flex-align: start;
       align-items: flex-start;
       height: 565px;
       margin: 0;
-      width: 50%; } }
+      width: 50%;
+      padding-bottom: 0; }
+      #about .about .aboutUs .aboutItem {
+        margin-left: 0; } }
 
 #projects {
   margin: 0 auto; }
@@ -1089,7 +1084,8 @@ header {
       justify-content: center;
       -webkit-box-align: center;
       -ms-flex-align: center;
-      align-items: center; }
+      align-items: center;
+      padding: 0; }
       #projects .projectCats nav ul li {
         list-style: none;
         margin: 25px 0; }
@@ -1263,7 +1259,7 @@ header {
       color: #e64b37; }
 
 footer .wrapper {
-  margin: 200px auto 0 auto;
+  margin: 150px auto 0 auto;
   width: 65%; }
   footer .wrapper .footer {
     display: -webkit-box;
@@ -1350,7 +1346,7 @@ footer .wrapper {
       color: #7d7d7d;
       font-size: 1.5rem; }
     footer .wrapper .theEnd .socialLinks ul {
-      margin: 15px auto;
+      margin: 10px auto;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1361,7 +1357,7 @@ footer .wrapper {
       footer .wrapper .theEnd .socialLinks ul a {
         display: inline-block;
         text-align: center;
-        margin: 0 7px;
+        margin: 12px 7px;
         padding: 10px 13px;
         border-radius: 40px;
         color: white;
@@ -1378,7 +1374,7 @@ footer .wrapper {
           right: 0;
           left: 0;
           bottom: 0;
-          padding-top: 12px;
+          padding-top: 10px;
           -webkit-transition: margin-top 150ms linear;
           -o-transition: margin-top 150ms linear;
           transition: margin-top 150ms linear; }
@@ -1388,7 +1384,7 @@ footer .wrapper {
           right: 0;
           left: 0;
           bottom: 0;
-          padding-top: 12px;
+          padding-top: 10px;
           margin-top: 35px;
           -webkit-transition: margin-top 150ms linear;
           -o-transition: margin-top 150ms linear;
