balanced the margin in the about section

--- a/styles/sections/_about.scss
+++ b/styles/sections/_about.scss
@@ -149,6 +149,7 @@
         .about {
             flex-direction: row;
             justify-content: space-between;
+            margin-bottom: 65px;
             .aboutImg {
                 width: 50%;
                 height: auto;
