moved the js to a separate file and made a number of small aesthetic improvements to the site including fixing sizing of the about section and its font awesome icons. Font awesome icons were fixed with the fa-fw tag from the font awesome docs. Also fixed the side by side height issue but using flex box and forcing the parent height and letting the rest grow

--- a/styles/sections/_about.scss
+++ b/styles/sections/_about.scss
@@ -2,29 +2,35 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
+    // height: 500px;
     .about {
         display: flex;
         justify-content: flex-start;
         align-items: center;
         width: 100%;
+        // height: 500px;
+        border-bottom: 1px solid $borderColor;
         .aboutImg {
             display: flex;
             align-items: stretch;
             width: 50%;
+            height: 550px;
             img{
                 display: block;
                 width: 100%;
-                height: auto;
+                height: 100%;
+                object-fit: cover;
             }
         }
         .aboutUs {
             padding-left: 60px;
-            border-bottom: 1px solid $borderColor;
+            // border-bottom: 1px solid $borderColor;
             display: flex;
             flex-direction: column;
             justify-content: center;
             margin-top: 35px;
             width: 50%;
+            // height: 100%;
             h2 {
                 margin-top: 0;
                 text-transform: uppercase;
@@ -37,8 +43,6 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    height: 40px;
-                    width: 52px;
                     i {
                         display: block;
                         font-size: 4rem;
@@ -66,7 +70,7 @@
             flex-direction: column;
             margin-bottom: 35px;
             .aboutImg {
-                height: 225px;
+                // height: 225px;
                 width: 80%;
             }
             .aboutUs {
@@ -111,7 +115,7 @@
             justify-content: center;
             align-items: center;
             .aboutImg {
-                height: 325px;
+                height: 360px;
                 width: 80%;
             }
             .aboutUs {
@@ -131,7 +135,7 @@
             justify-content: center;
             align-items: center;
             .aboutImg {
-                height: 410px;
+                height: 430px;
                 width: 80%;
             }
             .aboutUs {
@@ -150,15 +154,16 @@
             flex-direction: row;
             justify-content: space-between;
             margin-bottom: 65px;
+            border-top: 1px solid $borderColor;
             .aboutImg {
                 width: 50%;
-                height: auto;
+                height: 550px;
             }
             .aboutUs {
-                border-top: 1px solid $borderColor;
+                // border-top: 1px solid $borderColor;
                 padding-left: 60px;
                 align-items: flex-start;
-                height: 565px;
+                height: 100%;
                 margin: 0;
                 width: 50%;
                 padding-bottom: 0;
