--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -9,13 +9,16 @@
     .logo {
         border-right: 0.5px solid rgba(211, 211, 211, 0.5);
         width: 250px;
-        margin: 0 auto;
+        // margin: 0 auto;
         max-width: 250px;
-         img {
+        a{
             display: block;
-            width: 100%;
-            max-width: 100%;
-            padding: 20px 35px;
+            img {
+                display: block;
+                width: 100%;
+                max-width: 100%;
+                padding: 20px 35px;
+            }
         }
     }
     nav {
